# spkg

./: .gitignore  README.md  README_cn.md  pyproject.toml  setup.py
.github/: publish.yml
.github/workflows/: publish.yml
spkg/: __main__.py
src/spkg/: __about__.py  __init__.py  __main__.py
src/spkg/action/: __init__.py
src/spkg/ci/: __init__.py
src/spkg/cli/: __init__.py
src/spkg/hatch/: __init__.py
src/spkg/log/: __init__.py
