[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spkg"
dynamic = ["version"]
description = 'SPKG (Simple Packager) - A command line tools for building and uploading python packages.'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "xuanzhi33", email = "xuanzhi33@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "hatch",
]

[project.urls]
Documentation = "https://github.com/xuanzhi33/spkg#readme"
Issues = "https://github.com/xuanzhi33/spkg/issues"
Source = "https://github.com/xuanzhi33/spkg"

[project.scripts]
spkg = "spkg.cli:spkg"

[tool.hatch.version]
path = "src/spkg/__about__.py"
